Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/7024568/T7024568.out
T7024568.java:9:40: compiler.err.cant.resolve.location: kindname.variable, undefined, , , (compiler.misc.location: kindname.class, Main, null)
1 error
